--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 				<a href="index.html"><img src="images/kt-logo-box.png"></a>
 		</header>
 			<div class="slideshow">
-					<img class="photo"  src="images/portfolio1.jpg" alt="" />
+					<img class="photo"  src="images/ETB.jpg" alt="" />
 					<img class="photo"  src="images/knitting1.jpg" alt="" />
-					<img class="photo"  src="images/portfolio2.jpg" alt="" />
+					<img class="photo"  src="images/JM.jpg" alt="" />
 					<img class="photo"  src="images/knitting2.jpg" alt="" />
 			</div>
 			<hr>
