--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 			<p>Hi! Thanks for taking a look at my page! <br>
 				I'm Kelly Talley, a print and web designer based in Birmingham, Alabama. I've been working in design for over a decade and I have a strong interest in creating beautiful and effective designs for small business owners of all types. Great design does not have to be a luxury for your business and I can work with all budgets to create something fabulous. </p>
 				<p>I studied Graphic Design and Journalism at the University of Alabama, where I graduated in 2003. I have a passion for clean design, typography and color theory.</p>
-				<p>I'm also a knitting designer who creates acessories for all types. I've been knitting for several years and love creating warm and cozy accessories!</p>
+				<p>I'm also a knitting designer who creates accessories for all types. I've been knitting for several years and love creating warm and cozy accessories!</p>
 				<p>Check out my <a href="design.html">design</a> and <a href="knitting.html">knitting</a> portfolios!</p>
 				<p><a href="mailto:kelly.c.talley@gmail.com">Contact me</a> for more information about my design and knitting work or to hire me for a project!</p>
 			</div>
