--- a/knitting.html
+++ b/knitting.html
@@ -23,27 +23,27 @@
 		</header>		<section>
 			<figure class="cap-left">
 				<a href="#"><img class="portfolio-img" src="images/knitting1.jpg"></a>
-				<figcaption>Info here</figcaption>
+				<figcaption>Neckwarmer</figcaption>
 			</figure>
 			<figure class="cap-left">
 				<a href="#"><img class="portfolio-img" src="images/knitting2.jpg"></a>
-				<figcaption>Info here</figcaption>
+				<figcaption>Neckwarmer</figcaption>
 			</figure>
 			<figure class="cap-left">
 				<a href="#"><img class="portfolio-img" src="images/knitting3.jpg"></a>
-				<figcaption>Info here</figcaption>
+				<figcaption>A variety of knits</figcaption>
 			</figure>
 			<figure class="cap-left">
 				<a href="#"><img class="portfolio-img" src="images/knitting4.jpg"></a>
-				<figcaption>Info here</figcaption>
+				<figcaption>Ladder scarf</figcaption>
 			</figure>
 			<figure class="cap-left">
 				<a href="#"><img class="portfolio-img" src="images/knitting5.jpg"></a>
-				<figcaption>Info here</figcaption>
+				<figcaption>Talleyknits on display</figcaption>
 			</figure>
 			<figure class="cap-left">
 				<a href="#"><img class="portfolio-img" src="images/knitting6.jpg"></a>
-				<figcaption>Info here</figcaption>
+				<figcaption>A variety of knits</figcaption>
 			</figure>
 		</section>
 		<hr>
