changing anchor placement

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,7 @@
 			<a name="portfolio1"></a>
 			<img class="full-img" src="images/portfolio-full1.jpg">
 			<p class="full-desc">Template ad for a Mexican restaurant.</p> 
-			<hr>
-			<a name="portfolio2"></a>
+			<a name="portfolio2"></a><hr>
 			<img class="full-img" src="images/portfolio-full2.jpg">
 			<p class="full-desc">Direct mail ad for Higher Taste restaurant.</p> 
 			<hr>
