more changing anchors

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,59 +25,60 @@
 			<a name="portfolio1"></a>
 			<img class="full-img" src="images/portfolio-full1.jpg">
 			<p class="full-desc">Template ad for a Mexican restaurant.</p> 
+
 			<a name="portfolio2"></a><hr>
 			<img class="full-img" src="images/portfolio-full2.jpg">
 			<p class="full-desc">Direct mail ad for Higher Taste restaurant.</p> 
-			<hr>
-			<a name="portfolio3"></a>
+
+			<a name="portfolio3"></a><hr>
 			<img class="full-img" src="images/portfolio-full3.jpg">
 			<p class="full-desc">Template ad for Ashley Furniture.</p> 
-			<hr>
-			<a name="portfolio4"></a>
+
+			<a name="portfolio4"></a><hr>
 			<img class="full-img" src="images/portfolio-full4.jpg">
 			<p class="full-desc">Template ad for Sierra Sleep.</p> 
-			<hr>
-			<a name="portfolio5"></a>
+
+			<a name="portfolio5"></a><hr>
 			<img class="full-img" src="images/portfolio-full5.jpg">
 			<p class="full-desc">Template ad for Ashley Furniture.</p> 
-			<hr>
-			<a name="portfolio6"></a>
+
+			<a name="portfolio6"></a><hr>
 			<img class="full-img" src="images/portfolio-full6.jpg">
 			<p class="full-desc">Cover art for local monthly newspaper, The Leaf.</p> 
-			<hr>
-			<a name="portfolio7"></a>
+
+			<a name="portfolio7"></a><hr>
 			<img class="full-img" src="images/portfolio-full7.jpg">
 			<p class="full-desc">Cover art for local monthly newspaper, The Leaf.</p> 
-			<hr>
-			<a name="portfolio8"></a>
+
+			<a name="portfolio8"></a><hr>
 			<img class="full-img" src="images/portfolio-full8.jpg">
 			<p class="full-desc">Cover art for local monthly newspaper, The Leaf.</p> 
-			<hr>
-			<a name="portfolio9"></a>
+
+			<a name="portfolio9"></a><hr>
 			<img class="full-img" src="images/portfolio-full9.jpg">
 			<p class="full-desc">Editorial layout for Jessica Meuse article.</p> 
-			<hr>
-			<a name="portfolio10"></a>
+
+			<a name="portfolio10"></a><hr>
 			<img class="full-img" src="images/portfolio-full10.jpg">
 			<p class="full-desc">Editoral layout for Rick Carter and Telluride article.</p> 
-			<hr>
-			<a name="portfolio11"></a>
+
+			<a name="portfolio11"></a><hr>
 			<img class="full-img" src="images/portfolio-full11.jpg">
 			<p class="full-desc">Editoral layout for George Scherer article.</p> 
-			<hr>
-			<a name="portfolio12"></a>
+
+			<a name="portfolio12"></a><hr>
 			<img class="full-img" src="images/portfolio-full12.jpg">
 			<p class="full-desc">Newspaper ad for Bellview Baptist Church's BBQ fundraiser.</p> 
-			<hr>
-			<a name="portfolio13"></a>
+
+			<a name="portfolio13"></a><hr>
 			<img class="full-img" src="images/portfolio-full13.jpg">
 			<p class="full-desc">Newspaper ad for Woodstock Wedding Chapel.</p> 
-			<hr>
-			<a name="portfolio14"></a>
+
+			<a name="portfolio14"></a><hr>
 			<img class="full-img" src="images/portfolio-full14.jpg">
 			<p class="full-desc">Newspaper ad for McAdory Baptist Church's Halloween event.</p> 
-			<hr>
-			<a name="portfolio15"></a>
+
+			<a name="portfolio15"></a><hr>
 			<img class="full-img" src="images/portfolio-full15.jpg">
 			<p class="full-desc">Newspaper ad for the Southern Museum of Flight.</p> 
 		</section>
