--- a/index.html
+++ b/index.html
@@ -1,47 +1,106 @@
-<!doctype html>
-<html>
-	<head>
-		<title>Talley Design</title>
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	</head>
-	<body>
-		<div class="border">
-		<div class="wrapper">
-		<header>
-		<nav>
-			<a href="index.html">home</a>
-			<a href="design.html">design</a>
-			<a href="knitting.html">knitting</a>
-			<a href="about.html">about</a>
-		</nav>
-				<a href="index.html"><img src="images/kt-logo-box.png"></a>
-		</header>
-			<div class="slideshow">
-					<img class="photo"  src="images/ETB.jpg" alt="" />
-					<img class="photo"  src="images/knitting1.jpg" alt="" />
-					<img class="photo"  src="images/JM.jpg" alt="" />
-					<img class="photo"  src="images/knitting2.jpg" alt="" />
-			</div>
-			<hr>
-			<section>
-				<div id="info">
-				<h1>Thanks for stopping by!</h1>
-				<h2>Hello, there! I'm Kelly, and I'd love to create something beautiful for you.</h2>
-				<p>Need some design work? I'm your go-to gal. I offer a wide range of print and digital graphic design services. No job is too small! I believe that good design shouldn't have to be a luxury, and I'm glad to work with businesses of all sizes!</p>
-				<p>Looking for something warm and fuzzy? Let me knit something up for you! I create fabulous handknit accessories for you and your home. Check out what I've got in stock, or contact me for custom work!</p>
-				</div>
-			</section>
-			<hr>
-		<footer>
-			<img src="images/swirl-logo.png">
-			<p>Contact me at <a href="mailto:kelly.c.talley@gmail.com">kelly.c.talley@gmail.com</a>!</p>
-		</footer>
-		</div>	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Kelly Talley Design</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Changa+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+</head>
+<body>
+	<nav class="top-navigation">
+		<div class="content">
+		<div class="nav">
+			<ul class="nav-links">
+				<li><a href="#home">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+					<img class="logo" src="images/kt-logo-box.png" alt="talley logo">
 		</div>
-	</body>
+		</div>
+	</nav>
+	<a name="home"></a>
+	<section class="introduction">
+	<div class="content">
+			<h1>Thanks for stopping by!</h1>
+			<h3>Let me create something beautiful for you! <br> Print design, logos, web design and more. Whatever your business needs to look good... that's what I do.</h3>
+	</div>
+	</section>
+	<section class="about">
+		<a name="about" class="anchor"></a>
+		<div class="content">
+			<img class="kct-image" src="images/kct.jpg" alt="Kelly Talley">
+			<div class="about-text">
+				<p>Hello, there! I'm Kelly, a sometimes knitter, frequent coffee drinker and constant designer. I'm always looking for ways to create new things! I can help you put your best design face forward, no matter the size of your business or budget. I believe that good design does not have to be a luxury and I want to help your business look its very best!</p>
+			</div>
+		</div>
+	</section>
+	<section class="portfolio">
+		<a name="portfolio" class="anchor"></a>
+		<div class="content">
+			<h2>Take a look!</h2>
+			<p id="portfolio-text">Here's a peek at some of the work I've done.</p>
+			<div class="box-layout">
+                <figure class="box">
+                    <a href="#img1"><img src="images/marathon-brand-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img1"><img src="images/marathon-brand.jpg"></a>
+                    <figcaption>Folder and sales sheet for Marathon Electrical Contractors.</figcaption>   
+                </figure>
+                <figure class="box">
+                    <a href="#img2"><img src="images/karma-site-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img2"><img src="images/karma-site.jpg"></a>
+                    <figcaption>Web design study for <a href="#">Karma</a>.</figcaption>   
+                </figure>
+                <figure class="box">
+                    <a href="#img3"><img src="images/customer-app-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img3"><img src="images/customer-app.jpg"></a>
+                    <figcaption>Customer Appreciation sale ad for Ashley Furniture.</figcaption>   
+                </figure>
+                <figure class="box">
+                    <a href="#img4"><img src="images/mexican-ad-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img4"><img src="images/mexican-ad.jpg"></a>
+                    <figcaption>Restaurant menu ad for El Toro Bravo.</figcaption>   
+                </figure>
+                <figure class="box">
+                    <a href="#img5"><img src="images/marathon-ad-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img5"><img src="images/marathon-ad.jpg"></a>
+                    <figcaption>Magazine ad for Marathon Electrical Contractors.</figcaption>   
+                </figure>
+                <figure class="box">
+                    <a href="#img6"><img src="images/kct-bc-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img6"><img src="images/kct-bc.jpg"></a>
+                    <figcaption>Personal business card.</figcaption>   
+                </figure>
+                <figure class="box">
+                    <a href="#img7"><img src="images/toro-bravo-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img7"><img src="images/toro-bravo.jpg"></a>
+                    <figcaption>Web design study for El Toro Bravo.</figcaption>   
+                </figure>
+                <figure class="box">
+                    <a href="#img8"><img src="images/better-sleep-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img8"><img src="images/better-sleep.jpg"></a>
+                    <figcaption>Better Sleep Month ad for Ashley Furniture.</figcaption>   
+                </figure>
+                <figure class="box">
+                    <a href="#img9"><img src="images/marathon-bc-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img9"><img src="images/marathon-bc.jpg"></a>
+                    <figcaption>Business card for Marathon Electrical Contractors.</figcaption>   
+                </figure>
+            </div>
+		</div>
+		<hr>
+	</section>
+    <footer>
+        <a name="contact"></a>
+        <div class="content">
+            <h3>Contact me at <a href="mailto:kelly.c.talley@gmail.com">kelly.c.talley@gmail.com</a> or find me online!</h3>
+            <i class="fa fa-linkedin-square"></i>
+            <i class="fa fa-github-square"></i>
+            <i class="fa fa-twitter-square"></i>
+        </div>
+    </footer>
+</body>
 </html>
