--- a/design.html
+++ b/design.html
@@ -1,93 +1,6 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Talley Design</title>
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+		<meta http-equiv="refresh" content="0" url="http://kellyctalley.github.io/index.html">
 	</head>
-	<body>
-		<div class="border">
-		<div class="wrapper">
-		<header>
-		<nav>
-			<a href="index.html">home</a>
-			<a href="design.html">design</a>
-			<a href="knitting.html">knitting</a>
-			<a href="about.html">about</a>
-		</nav>
-				<a href="index.html"><img src="images/kt-logo-box.png"></a>
-		</header>		<section>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio1"><img class="portfolio-img" src="images/portfolio1.jpg"></a>
-				<figcaption>Template Ad - Mexican Restaurant</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio2"><img class="portfolio-img" src="images/portfolio2.jpg"></a>
-				<figcaption>Direct Mail Ad - Higher Taste</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio3"><img class="portfolio-img" src="images/portfolio3.jpg"></a>
-				<figcaption>Template Ad - Ashley Furniture</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio4"><img class="portfolio-img" src="images/portfolio4.jpg"></a>
-				<figcaption>Template Ad - Sierra Sleep</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio5"><img class="portfolio-img" src="images/portfolio5.jpg"></a>
-				<figcaption>Template Ad - Ashley Furniture</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio6"><img class="portfolio-img" src="images/portfolio6.jpg"></a>
-				<figcaption>Cover Art - The Leaf</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio7"><img class="portfolio-img" src="images/portfolio7.jpg"></a>
-				<figcaption>Cover Art - The Leaf</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio8"><img class="portfolio-img" src="images/portfolio8.jpg"></a>
-				<figcaption>Cover Art - The Leaf</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio9"><img class="portfolio-img" src="images/portfolio9.jpg"></a>
-				<figcaption>Editorial Layout - The Leaf</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio10"><img class="portfolio-img" src="images/portfolio10.jpg"></a>
-				<figcaption>Editorial Layout - The Leaf</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio11"><img class="portfolio-img" src="images/portfolio11.jpg"></a>
-				<figcaption>Editorial Layout - The Leaf</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio12"><img class="portfolio-img" src="images/portfolio12.jpg"></a>
-				<figcaption>Newspaper Ad - Bellview Baptist Church</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio13"><img class="portfolio-img" src="images/portfolio13.jpg"></a>
-				<figcaption>Newspaper Ad - Woodstock Wedding Chapel</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio14"><img class="portfolio-img" src="images/portfolio14.jpg"></a>
-				<figcaption>Newspaper Ad - Baptist Church at McAdory</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="portfolio.html#portfolio15"><img class="portfolio-img" src="images/portfolio15.jpg"></a>
-				<figcaption>Newspaper Ad - Southern Museum of Flight</figcaption>
-			</figure>
-		</section>
-		<hr>
-		<footer>
-			<img src="images/swirl-logo.png">
-			<p>Contact me at <a href="mailto:kelly.c.talley@gmail.com">kelly.c.talley@gmail.com</a>!</p>
-		</footer>
-		</div>
-	</div>
-	</body>
-</html>
+	</html>
