--- a/design.html
+++ b/design.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0" url="http://kellyctalley.github.io/index.html">
+		<meta http-equiv="refresh" content="0; url=http://kellyctalley.github.io/index.html">
 	</head>
 	</html>
