--- a/knitting.html
+++ b/knitting.html
@@ -1,57 +1,6 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Talley Design</title>
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+		<meta http-equiv="refresh" content="0; url=http://kellyctalley.github.io/index.html">
 	</head>
-	<body>
-		<div class="border">
-		<div class="wrapper">
-		<header>
-		<nav>
-			<a href="index.html">home</a>
-			<a href="design.html">design</a>
-			<a href="knitting.html">knitting</a>
-			<a href="about.html">about</a>
-		</nav>
-				<a href="index.html"><img src="images/kt-logo-box.png"></a>
-		</header>		<section>
-			<figure class="cap-left">
-				<a href="#"><img class="portfolio-img" src="images/knitting1.jpg"></a>
-				<figcaption>Neckwarmer</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="#"><img class="portfolio-img" src="images/knitting2.jpg"></a>
-				<figcaption>Neckwarmer</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="#"><img class="portfolio-img" src="images/knitting3.jpg"></a>
-				<figcaption>A variety of knits</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="#"><img class="portfolio-img" src="images/knitting4.jpg"></a>
-				<figcaption>Ladder scarf</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="#"><img class="portfolio-img" src="images/knitting5.jpg"></a>
-				<figcaption>Talleyknits on display</figcaption>
-			</figure>
-			<figure class="cap-left">
-				<a href="#"><img class="portfolio-img" src="images/knitting6.jpg"></a>
-				<figcaption>A variety of knits</figcaption>
-			</figure>
-		</section>
-		<hr>
-		<footer>
-			<img src="images/swirl-logo.png">
-			<p>Contact me at <a href="mailto:kelly.c.talley@gmail.com">kelly.c.talley@gmail.com</a>!</p>
-		</footer>
-		</div>
-	</div>
-	</body>
-</html>
+	</html>
