--- a/about.html
+++ b/about.html
@@ -1,43 +1,6 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Talley Design</title>
-		<link rel="stylesheet" type="text/css" href="css/reset.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if IE]> <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+		<meta http-equiv="refresh" content="0; url=http://kellyctalley.github.io/index.html">
 	</head>
-	<body>
-		<div class="border">
-		<div class="wrapper">
-		<header>
-		<nav>
-			<a href="index.html">home</a>
-			<a href="design.html">design</a>
-			<a href="knitting.html">knitting</a>
-			<a href="about.html">about</a>
-		</nav>
-				<a href="index.html"><img src="images/kt-logo-box.png"></a>
-		</header>		<hr>
-		<section>
-			<img id="about-img" src="images/kct.jpg">
-			<div class="about-p">
-			<p>Hi! Thanks for taking a look at my page! <br>
-				I'm Kelly Talley, a print and web designer based in Birmingham, Alabama. I've been working in design for over a decade and I have a strong interest in creating beautiful and effective designs for small business owners of all types. Great design does not have to be a luxury for your business and I can work with all budgets to create something fabulous. </p>
-				<p>I studied Graphic Design and Journalism at the University of Alabama, where I graduated in 2003. I have a passion for clean design, typography and color theory.</p>
-				<p>I'm also a knitting designer who creates accessories for all types. I've been knitting for several years and love creating warm and cozy accessories!</p>
-				<p>Check out my <a href="design.html">design</a> and <a href="knitting.html">knitting</a> portfolios!</p>
-				<p><a href="mailto:kelly.c.talley@gmail.com">Contact me</a> for more information about my design and knitting work or to hire me for a project!</p>
-			</div>
-			</section>
-			<hr>
-		<footer>
-			<img src="images/swirl-logo.png">
-			<p>Contact me at <a href="mailto:kelly.c.talley@gmail.com">kelly.c.talley@gmail.com</a>!</p>
-		</footer>
-		</div>	
-		</div>
-	</body>
-</html>
+	</html>
