--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <figure class="box">
                     <a href="#img2"><img src="images/karma-site-thumb.jpg" width="300px"></a>
                     <a href="#_" class="lightbox" id="img2"><img src="images/karma-site.jpg"></a>
-                    <figcaption>Web design study for <a href="#">Karma</a>.</figcaption>   
+                    <figcaption>Web design study for <a href="http://kellyctalley.github.io/karma/index.html">Karma</a>.</figcaption>   
                 </figure>
                 <figure class="box">
                     <a href="#img3"><img src="images/customer-app-thumb.jpg" width="300px"></a>
@@ -77,7 +77,7 @@
                 <figure class="box">
                     <a href="#img7"><img src="images/toro-bravo-thumb.jpg" width="300px"></a>
                     <a href="#_" class="lightbox" id="img7"><img src="images/toro-bravo.jpg"></a>
-                    <figcaption>Web design study for El Toro Bravo.</figcaption>   
+                    <figcaption>Web design study for <a href="http://kellyctalley.github.io/restaurant/index.html">El Toro Bravo</a>.</figcaption>   
                 </figure>
                 <figure class="box">
                     <a href="#img8"><img src="images/better-sleep-thumb.jpg" width="300px"></a>
