--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<li><a href="#home">Home</a></li>
 				<li><a href="#about">About</a></li>
 				<li><a href="#portfolio">Portfolio</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
 					<img class="logo" src="images/kt-logo-box.png" alt="talley logo">
 		</div>
