--- a/index.html
+++ b/index.html
@@ -97,9 +97,17 @@
         <a name="contact"></a>
         <div class="content">
             <h3>Contact me at <a href="mailto:kelly.c.talley@gmail.com">kelly.c.talley@gmail.com</a> or find me online!</h3>
-            <i class="fa fa-linkedin-square"></i>
-            <i class="fa fa-github-square"></i>
-            <i class="fa fa-twitter-square"></i>
+            <ul class="icons">
+            <li>
+                <a href="https://www.linkedin.com/in/kellyctalley"><i class="fa fa-linkedin-square"></i></a>
+            </li>
+            <li>
+                <a href="https://github.com/kellyctalley"><i class="fa fa-github-square"></i></a>
+            </li>
+            <li>
+               <a href="https://twitter.com/talleyknits"><i class="fa fa-twitter-square"></i></a>
+            </li>
+        </ul>
         </div>
     </footer>
 </body>
