--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		</div>
 		<hr>
 	</section>
-    <footer>
+    <footer class="contact">
         <a name="contact"></a>
         <div class="content">
             <h3>Contact me at <a href="mailto:kelly.c.talley@gmail.com">kelly.c.talley@gmail.com</a> or find me online!</h3>
