adding images and boxes

--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
                     <a href="#_" class="lightbox" id="img9"><img src="images/marathon-bc.jpg"></a>
                     <figcaption>Business card for Marathon Electrical Contractors.</figcaption>   
                 </figure>
+                <figure class="box">
+                    <a href="#img10"><img src="images/jm-layout-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img10"><img src="images/jm-layout.jpg"></a>
+                    <figcaption>Cover art and editorial layout for The Leaf.</figcaption>   
+                </figure>
+                <figure class="box">
+                    <a href="#img11"><img src="images/grocery-ad-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img11"><img src="images/grocery-ad.jpg"></a>
+                    <figcaption>Grocery store mailer with coupons.</figcaption>   
+                </figure>
+                <figure class="box">
+                    <a href="#img12"><img src="images/rc-layout-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img12"><img src="images/rc-layout.jpg"></a>
+                    <figcaption>Cover art and editorial layout for The Leaf.</figcaption>   
+                </figure>
             </div>
 		</div>
 		<hr>
