--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Changa+One' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <meta property="og:image" content="http://kellyctalley.github.io/images/kt-logo-box.png"/>
 </head>
 <body>
 	<nav class="top-navigation">
