added the leaf image

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     <figcaption>Folder and sales sheet for Marathon Electrical Contractors.</figcaption>   
                 </figure>
                 <figure class="box">
-                    <a href="#img2"><img src="images/karma-site-thumb.jpg" width="300px"></a>
-                    <a href="#_" class="lightbox" id="img2"><img src="images/karma-site.jpg"></a>
-                    <figcaption>Web design study for <a href="http://kellyctalley.github.io/karma/index.html">Karma</a>.</figcaption>   
+                    <a href="#img2"><img src="images/read-the-leaf-thumb.jpg" width="300px"></a>
+                    <a href="#_" class="lightbox" id="img2"><img src="images/read-the-leaf.jpg"></a>
+                    <figcaption>Web design and management for <a href="http://www.readtheleaf.com">The Leaf</a>.</figcaption>   
                 </figure>
                 <figure class="box">
                     <a href="#img3"><img src="images/customer-app-thumb.jpg" width="300px"></a>
